# aura.so

./: .gitignore  CMakeLists.txt  README.md  settings.gradle
.github/workflows/: build-aura-so.yml  build-tsm-rebuild.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  changelevel.cpp  classes.dex  config.json  main.cpp  spiritshop.cpp  translation.cpp
app/src/main/java/git/artdeell/autowax/: AutoWax.java  CandleRunBatch.java
app/src/main/java/git/artdeell/autowax/spiritshop/: SpiritShop.java
app/src/main/java/git/artdeell/aw4c/: CanvasMain.java
app/src/main/res/values/: strings.xml
docs/: MIGRATION_NOTES.md  ORACLE_PARITY_MATRIX.md  REPO_ACTION_QUEUE.md  REPO_INTEGRATION_MATRIX.md  repo_freshness_2026-03-19.json  repo_scan_primary.json  repo_scan_users.json  repo_update_audit_2026-03-19.md
gradle/wrapper/: gradle-wrapper.properties
include/: AuraHostApi.h
scripts/: make-release.ps1  pull_libciphered.ps1  update-and-push.ps1  update-dev.ps1
src/: OracleParityCatalog.h  TSMRebuildMod.cpp
